force-app/main/default/objects/Approval_Request__c/Approval_Request__c.object-meta.xml
<CustomObject>
    <description>One row per approval level. Written only by QuoteApprovalService.</description>
    <label>Approval Request</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>