force-app/main/default/objects/Approval_Request__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval Requests (Approver)</relationshipLabel>
    <relationshipName>QF_Approval_Requests_As_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>