force-app/main/default/objects/Approval_Request__c/fields/Requested_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Requested_Discount_Pct__c</fullName>
    <label>Requested Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>