force-app/main/default/objects/Approval_Request__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval Requests (Submitter)</relationshipLabel>
    <relationshipName>QF_Approval_Requests_As_Submitter</relationshipName>
    <type>Lookup</type>
</CustomField>