force-app/main/default/objects/Approval_Request__c/fields/Threshold_Pct__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Pct__c</fullName>
    <label>Threshold %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>